--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest implementation and use 70:30 split data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -249,6 +256,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest use on K-Fold Cross validation Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -289,6 +303,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parrallel VS Serial Random Forest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -318,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -341,9 +364,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Running the process in parallel\n",
-    "\n",
-    "The following exmaple demonstartes how runninng training in parallel takes lesser time than that of a serial running process\n"
+    "# Random Function\n",
+    "\n"
    ]
   },
   {
@@ -419,6 +441,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Y = MX + C data generated and noise added"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -456,6 +485,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Polynomial fit (5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -482,6 +518,13 @@
     "p = np.poly1d(np.polyfit(x, y, 5))\n",
     "plt.plot(x, y, 'o', x, p(x), '-')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Average polynomail fit"
    ]
   },
   {
@@ -521,6 +564,13 @@
     "plt.plot(x, y, 'o', x, p_mean(x), '-')\n",
     "plt.show()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kaggle Competition\n"
    ]
   },
   {
@@ -585,7 +635,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -636,6 +686,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ADA Boost without noise"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -680,6 +737,13 @@
     "\n",
     "ab = ADABoost('classification', 'gini', iris_data, 8)\n",
     "ab.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ADABoost - with noise added"
    ]
   },
   {
