--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -37,6 +37,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question - 1\n",
+    "\n",
+    "<p float=\"left\" align=\"center\">\n",
+    "  <img src=\"pic1.JPG\" width=\"400\" />\n",
+    "  <img src=\"pic2.JPG\" width=\"400\" />\n",
+    "  <img src=\"pic3.JPG\" width=\"400\" />\n",
+    "</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
